# backend/build/swagger.json
@@ -479,6 +479,23 @@
 				],
 				"parameters": []
 			}
+		},
+		"/notes/ai-notes": {
+			"get": {
+				"operationId": "GetAllTrades",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": []
+			}
 		}
 	},
 	"servers": [
